--- a/chord/index2.html
+++ b/chord/index2.html
@@ -112,31 +112,36 @@ var svgp = d3.select("body").append("div").attr("id","viz")
     .append("g")
     .attr("class","circles");
 
+
+// chart labels
+  svgp.append("text")
+    .text("negative")
+    .attr({
+      x: ((width / 2)+boxw),
+      y: 55,
+      class: "underlay"
+    })
+    .attr("text-anchor", "middle");
+
+  svgp.append("text")
+    .text("positive")
+    .attr({
+      x: ((width*3)/2 + boxw),
+      y: 55,
+      class: "underlay"
+    })
+    .attr("text-anchor", "middle");
+
+
 var svg = svgp
   .append("g")
     .attr("class", "circle")
-    .attr("transform", "translate(" + ((width / 2)+boxw) + "," + height / 2 + ")");
+    .attr("transform", "translate(" + ((width / 2)+boxw) + "," + ((height / 2) + 36) + ")");
 
 var svg2 = svgp
   .append("g")
     .attr("class", "circle")
-    .attr("transform", "translate(" + ((width*3)/2 + boxw) + "," + height / 2 + ")");
-
-svg.append("text")
-  .text("negative")
-  .attr({
-    y: -(height / 2)+55,
-    class: "underlay"
-  })
-  .attr("text-anchor", "middle");
-
-svg2.append("text")
-  .text("positive")
-  .attr({
-    y: -(height / 2)+55,
-    class: "underlay"
-  })
-  .attr("text-anchor", "middle");
+    .attr("transform", "translate(" + ((width*3)/2 + boxw) + "," + ((height / 2) + 36) + ")");
 
 svg.append("circle")
   .attr("r", outerRadius);
@@ -170,7 +175,7 @@ d3.csv("cities.csv", function(cities){
   var NE_color = d3.scale.linear()
     .domain([0,NE+1])
     .range([d3.rgb(0,255,0),d3.rgb(0,64,0)]);
-    
+
   //SE is blue
   var SE_color = d3.scale.linear()
     .domain([0,SE+1])
@@ -378,7 +383,7 @@ d3.json("matrix_pos.json", function(matrix_p) {
         summary.append("rect")
           .attr({ y: sumtop + sumdy*(5+j) + 6, height: 12, fill: "red" })
           .attr("x", function(d){ return summary_city(d[1][0+j][1], d[1][0+j][2], d[1][5][0])[0]; })
-          .attr("width", function(d){ return summary_city(d[1][0+j][1], d[1][0+j][2], d[1][5][0])[1]; }); 
+          .attr("width", function(d){ return summary_city(d[1][0+j][1], d[1][0+j][2], d[1][5][0])[1]; });
 
         summary.append("rect")
           .attr({ y: sumtop + sumdy*(5+j) + 6, height: 12, fill: "green" })
@@ -408,7 +413,7 @@ d3.json("matrix_pos.json", function(matrix_p) {
           .attr({ y: sumtop + sumdy*(14+j) + 6, height: 12, fill: "red" })
           .attr("x", function(d){ return summary_city(d[2][0+j][1], d[2][0+j][2], d[2][5][0])[0]; })
           .attr("width", function(d){ return summary_city(d[2][0+j][1], d[2][0+j][2], d[2][5][0])[1]; });
-        
+
         summary.append("rect")
           .attr({ y: sumtop + sumdy*(14+j) + 6, height: 12, fill: "green" })
           .attr("x", sumcityleft+sumcitypartwidth+1)
@@ -416,12 +421,17 @@ d3.json("matrix_pos.json", function(matrix_p) {
       }
 
 
-var coverbox = d3.select(".mastersvg")
+var coverbox1 = d3.select(".mastersvg")
   .append("rect")
   .attr({
     x: 0, y:0, width: boxw, height: height, opacity: 0
   });
 
+var coverbox2 = d3.select(".mastersvg")
+  .append("rect")
+  .attr({
+    x: 0, y:0, width: width2, height: 72, opacity: 0
+  });
 
 // main charts
 
@@ -471,7 +481,7 @@ var coverbox = d3.select(".mastersvg")
         .innerRadius(outerRadius)
         .outerRadius(outerRadius+50);
 
-//proximity detenction for hover
+//proximity detection for hover
     var groupPathExtend= group.append("path")
         .attr("class", "extend_arc")
         .attr("d", extend_arc);
